# Easy-Know

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  course_urls.py  models.py  urls.py  views.py
courses/services/: courses.py
courses/static/courses/css/: catalog.css
courses/static/courses/css/course/: home.css
courses/templates/courses/: catalog.html
courses/templates/courses/course/: home.html
easyknow/: apps.py  urls.py  views.py
easyknow/templates/easyknow/: index.html
static/css/: main.css
templates/: base.html
templates/easy-know/: index.html
thumbnails/: admin.py  models.py  utils.py
users/: models.py
users/templates/registration/: login.html  password_reset_form.html  registration_base.html
