[tool.poetry]
name = "easy-know"
version = "0.1.0"
description = ""
authors = ["StatistIRL <vazsry7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
django-debug-toolbar = "^4.4.2"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
